# yolo_train_template

./: .gitignore  LICENSE  README.md  benchmark.bat  my_data_loader.py  prepare_data.bat  pyproject.toml  train.bat
configs/benchmark/: benchmark.yaml
configs/dataset/: data_config.json
configs/train/: train_config.yaml
scripts/: benchmark.py  train.py
yolo_template/: __init__.py
yolo_template/data_preparation/: __init__.py  prepare_yolo_data.py  visualize_dataset.py
yolo_template/visualization/: __init__.py  plot_utils.py  prediction_visualizer.py
