[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yolo-template"
version = "1.0.0"
description = "Универсальный шаблон проекта для обучения и оценки моделей YOLO (v8/v9/v10 и новее) на задачах детекции и сегментации"
readme = "README.md"
authors = [
    {name = "Egor K.", email = "yegork.science@gmail.com"}
]
keywords = ["yolo", "object-detection", "segmentation", "ultralytics", "deep-learning", "pytorch"]
requires-python = ">=3.9"
dependencies = [
    "ultralytics>=8.0.0",
    "pyyaml>=6.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "tqdm>=4.65.0",
    "pandas>=2.0.0",
    "seaborn>=0.12.0",
    "opencv-python>=4.8.0",
    "Pillow>=9.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

